Code cleanup for the tools